<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarMedicamentoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_medicamento"
        android:textSize="16sp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_nome_medicamento"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/descricao"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_descricao"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/horario"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/editHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/selecione_horario"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/salvar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>